objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Antenna_Type__c</fullName>
        <label>Antenna Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Attendant__c</fullName>
        <label>Auto Attendant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automated_Directory__c</fullName>
        <label>Automated Directory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Power__c</fullName>
        <label>Backup Power</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bandwidth__c</fullName>
        <label>Bandwidth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Barring__c</fullName>
        <label>Call Barring</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Forwarding__c</fullName>
        <label>Call Forwarding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conferencing__c</fullName>
        <label>Conferencing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Colour__c</fullName>
        <label>Device Colour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_IMEI__c</fullName>
        <label>Device IMEI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Manufacturer__c</fullName>
        <label>Device Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Network_Compatibility__c</fullName>
        <label>Device Network Compatibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Operating_System__c</fullName>
        <label>Device Operating System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Storage__c</fullName>
        <label>Device Storage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Inward_Dialing__c</fullName>
        <label>Direct Inward Dialing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ethernet_Ports__c</fullName>
        <label>Ethernet Ports</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Face_Size__c</fullName>
        <label>Face Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finish__c</fullName>
        <label>Finish</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genre__c</fullName>
        <label>Genre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICCID__c</fullName>
        <label>ICCID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMSI__c</fullName>
        <label>IMSI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interactive_Voice_Response__c</fullName>
        <label>Interactive Voice Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internet_Data_Usage_Cap__c</fullName>
        <label>Internet Data Usage Cap</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internet_Download_Speed__c</fullName>
        <label>Internet Download Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internet_Upload_Speed__c</fullName>
        <label>Internet Upload Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <label>Line Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSISDN__c</fullName>
        <label>MSISDN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Speed__c</fullName>
        <label>Maximum Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Music_on_Hold__c</fullName>
        <label>Music on Hold</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBX_Type__c</fullName>
        <label>PBX Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Channel__c</fullName>
        <label>Product Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIM_Type__c</fullName>
        <label>SIM Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Simultaneous_Connections__c</fullName>
        <label>Simultaneous Connections</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Space__c</fullName>
        <label>Storage Space</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strap__c</fullName>
        <label>Strap</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TV_Boxes_Required__c</fullName>
        <label>TV Boxes Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TV_Connection__c</fullName>
        <label>TV Connection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TV_Content__c</fullName>
        <label>TV Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voicemail__c</fullName>
        <label>Voicemail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wifi_Band__c</fullName>
        <label>Wifi Band</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wifi_Standard__c</fullName>
        <label>Wifi Standard</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ApprovedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ApprovedOn__c</fullName>
        <label>Approved On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeDefaultValues__c</fullName>
        <label>Attribute Default Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeMetadata__c</fullName>
        <label>Attribute Metadata</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CategoryData__c</fullName>
        <description>Data about the Catalogs/Categories that this product belongs to, stored in JSON format.</description>
        <label>Category Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ChangeDetectorImplementation__c</fullName>
        <description>Name of implementation which will be used by Change Detector in XOM</description>
        <inlineHelpText>Name of implementation which will be used by Change Detector in XOM</inlineHelpText>
        <label>ChangeDetectorImplementation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ClassId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For product spec and commercial offer types of records, identifies the class of this product spec or offer.</description>
        <label>Class</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Class)</relationshipLabel>
        <relationshipName>ClassProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of this Product. Used to identify the Product across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique product identifier can be used.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HeaderData__c</fullName>
        <description>Stores the headers for Matrix is stored as a JSON.</description>
        <inlineHelpText>Stores the headers for Matrix is stored as a JSON.</inlineHelpText>
        <label>Header Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HelpText__c</fullName>
        <label>Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ImageId__c</fullName>
        <label>Image</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsConfigurable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Configurable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsLocationDependent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location Dependent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsNotAssetizable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Assetizable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsOrderable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Orderable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JSONAttribute__c</fullName>
        <description>JSON body containing a denormalized representation of the product&apos;s Vlocity Attribute values and configuration metadata.</description>
        <label>JSONAttribute</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Modification__c</fullName>
        <label>Modification#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object Type</label>
        <referenceTo>vlocity_cmt__ObjectClass__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentClassId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For classes (Product2 records with record type Class), this identifies the parent class when this is a subclass.</description>
        <label>Parent Class</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Subclasses</relationshipLabel>
        <relationshipName>Subclasses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductSpecId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For commercial offers, this identifies the product specification on which this offer is based.</description>
        <label>Product Spec</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>ProductSpecOffers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductTemplateProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Template</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products Based on Template</relationshipLabel>
        <relationshipName>ProductTemplateProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Scope__c</fullName>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Order Item</fullName>
                    <default>true</default>
                    <label>Order Item</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SpecificationType__c</fullName>
        <description>For product spec types of records, identifies the type of specification such as product spec, resource spec or service spec.</description>
        <label>Specification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Resource</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Tariff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StandardPremium__c</fullName>
        <label>Standard Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubType__c</fullName>
        <description>Product Sub Type can be used to drive implementations/engines, as well as filtering products in the Catalog/Pricebook.  These values may be constrained by the Product Type. If Product Type = &quot;Product&quot; then these values are shown. For Product Type = &quot;Product Bundle&quot; the Sub Type may be NULL</description>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>vlocity_cmt__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Earphones</fullName>
                </value>
                <value>
                    <fullName>Extra</fullName>
                </value>
                <value>
                    <fullName>Handset</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Package</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                    <default>true</default>
                    <label>Product</label>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Tariff</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Watch</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>Device</fullName>
                </value>
                <value>
                    <fullName>Rate Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimeToLive__c</fullName>
        <label>Time To Live</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TrackAsAgreement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if product needs to be tracked as part of agreement</description>
        <label>Track As Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <description>Product Type can be used to drive eligibility/compatibility/recommendations/other implementations</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                    <default>true</default>
                    <label>Product</label>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__VendorAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED from 888.83</description>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <recordTypes>
        <fullName>vlocity_cmt__Class</fullName>
        <active>true</active>
        <label>Class</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__Product</fullName>
        <active>true</active>
        <label>Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__ProductTemplate</fullName>
        <active>true</active>
        <label>Product Template</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>